docs/tests/parser/edge_cases/valid/LambdaInFuncCall.src
fn void test() {
    let int result = reduce(list, lambda int (int acc, int x) captures base {
        return acc + x + base;
    }, 0);
}
