docs/tests/parser/edge_cases/invalid/LambdaCaptureNotIdent.src
fn void test() {
    let closure void() f = lambda void () captures 3.14 {
    };
}
